--- a/style.css
+++ b/style.css
@@ -1,5 +1,46 @@
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: "Arial";
 }
 
+h1, h2 {
+  margin: 0;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+#title, #buttons, #content {
+  background-color:rgba(255, 255, 255, 0.8);
+  margin: 1em auto;
+  padding: 0.25rem;
+  width: 80%;
+}
+
+#title, #content {
+  border: 5px solid red;
+  border-radius: 1em;
+}
+
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#buttons {
+  background-color: transparent;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0;
+}
+
+button {
+  background-color: rgba(252, 142, 243, 0.9);
+  color: rgba(250, 0, 0, 1);
+  font-size: 1rem;
+  font-weight: bold;
+  width: 45%;
+  padding: 0.2em 0.3em;
+}
