--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1, h2 {
-  margin: 0;
+  margin: 0 0 0 0.25em;
 }
 
 h1 {
@@ -26,7 +26,7 @@ h1 {
 #content {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 #buttons {
@@ -37,10 +37,23 @@ h1 {
 }
 
 button {
+  border: 2px solid purple;
+  border-radius: 0.5em;
   background-color: rgba(252, 142, 243, 0.9);
-  color: rgba(250, 0, 0, 1);
+  color: rgb(111, 0, 255);
   font-size: 1rem;
   font-weight: bold;
   width: 45%;
   padding: 0.2em 0.3em;
+}
+
+ul {
+  margin: 0;
+  padding: 0 1.5em;
+  width: 
+}
+
+li {
+  margin: 1em auto;
+  margin-bottom: 2em;
 }
