--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0 auto;
   font-family: "Arial";
+  max-width: 450px;
 }
 
 h1, h2 {
@@ -12,10 +13,10 @@ h1 {
 }
 
 #title, #buttons, #content {
-  background-color:rgba(255, 255, 255, 0.8);
+  background-color:rgba(255, 255, 255, 0.7);
   margin: 1em auto;
   padding: 0.25rem;
-  width: 80%;
+  width: 75%;
 }
 
 #title, #content {
@@ -39,7 +40,7 @@ h1 {
 button {
   border: 2px solid purple;
   border-radius: 0.5em;
-  background-color: rgba(252, 142, 243, 0.9);
+  background-color: rgba(252, 142, 243, 0.7);
   color: rgb(111, 0, 255);
   font-size: 1rem;
   font-weight: bold;
