--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   margin: 0 auto;
   font-family: "Arial";
-  width: 412px;
 }
 
 h1, h2 {
@@ -17,6 +16,7 @@ h1 {
   margin: 1em auto;
   padding: 0.25rem;
   width: 75%;
+  max-width: 450px;
 }
 
 #title, #content {
@@ -29,7 +29,7 @@ h1 {
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
-  height: 8rem;
+  height: 10rem;
 }
 
 h1 {
@@ -56,7 +56,7 @@ button {
   color: rgb(34, 0, 88);
   font-size: 1rem;
   font-weight: bold;
-  width: 45%;
+  width: 49%;
   padding: 0.2em 0.3em;
 }
 
