--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
+  font-size: 1.25rem;
   margin: 0 auto;
   font-family: "Arial";
 }
 
 h1, h2 {
-  margin: 0.25em 0 0 0;
+  margin: 0 0 0 0.25em;
 }
 
 h1 {
